--- a/Jobportalclient/Jobportalclient.csproj
+++ b/Jobportalclient/Jobportalclient.csproj
@@ -195,6 +195,7 @@
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\System.Xml.XPath.XDocument.dll" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\vbc.exe" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\VBCSCompiler.exe" />
+    <Content Include="UpdatePostedJob.aspx" />
     <Content Include="User.aspx" />
     <Content Include="UserHome.aspx" />
     <Content Include="ViewByCompany.aspx" />
@@ -247,6 +248,13 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdatePostedJob.aspx.cs">
+      <DependentUpon>UpdatePostedJob.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UpdatePostedJob.aspx.designer.cs">
+      <DependentUpon>UpdatePostedJob.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User.aspx.cs">
       <DependentUpon>User.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
